syntax = "proto3";

package article;

option go_package = "./article_and_post/pkg/pb";

import "google/protobuf/timestamp.proto";


// CreateArticleRequest
message CreateArticleRequest {
  string Id = 1;
  string title = 2;
  string content  = 3;
  string Author = 4;
  bool isDraft = 5;
  repeated string Tags = 6;
  google.protobuf.Timestamp createTime = 7;
  google.protobuf.Timestamp updateTime = 8;
  bool quickRead = 9;
  ContentOwnerShip contentOwnerShip = 10;
  bool canEdit = 11;
  repeated string viewBy = 12;
  repeated Comment comment = 13;

  enum ContentOwnerShip {
    THE_USER = 0;
    THE_MONKEYS = 1;
    THE_PARTNER = 2;
  }
}

message Comment {
  string id = 1;
  string commentator = 2;
  string commentatorId = 3;
  string comment = 4;

  google.protobuf.Timestamp commentTime = 7;
}

message CreateArticleResponse {
  int64 status = 1;
  string error = 2;
  string id = 3;
}

message GetArticlesRequest{}

message GetArticlesResponse {
  string Id = 1;
  string title = 2;
  string content  = 3;
  string Author = 4;
  google.protobuf.Timestamp createTime = 5;
  bool quickRead = 6;
  repeated string viewBy = 7;
}

service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {}
  rpc GetArticles (GetArticlesRequest) returns (stream GetArticlesResponse){};
}